tests/dom/dom.exp
CanvasRenderingContext2D.js:11
 11:     ctx.moveTo('0', '1');  // error: should be numbers
         ^^^^^^^^^^^^^^^^^^^^ call of method `moveTo`
 11:     ctx.moveTo('0', '1');  // error: should be numbers
                    ^^^ string. This type is incompatible with
number. See: [LIB] dom.js:710

CanvasRenderingContext2D.js:11
 11:     ctx.moveTo('0', '1');  // error: should be numbers
         ^^^^^^^^^^^^^^^^^^^^ call of method `moveTo`
 11:     ctx.moveTo('0', '1');  // error: should be numbers
                         ^^^ string. This type is incompatible with
number. See: [LIB] dom.js:710

eventtarget.js:9
  9:     (target.attachEvent('foo', listener): void); // invalid, may be undefined
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `attachEvent`. Function cannot be called on possibly undefined value
  9:     (target.attachEvent('foo', listener): void); // invalid, may be undefined
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ undefined

eventtarget.js:16
 16:     (target.detachEvent('foo', listener): void); // invalid, may be undefined
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `detachEvent`. Function cannot be called on possibly undefined value
 16:     (target.detachEvent('foo', listener): void); // invalid, may be undefined
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ undefined

path2d.js:9
  9:     (path.arcTo(0, 0, 0, 0, 10, '20', 5): void); // invalid
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `arcTo`
  9:     (path.arcTo(0, 0, 0, 0, 10, '20', 5): void); // invalid
                                     ^^^^ string. This type is incompatible with
union: number | undefined. See: [LIB] dom.js:585
  Member 1:
  number. See: [LIB] dom.js:585
  Error:
    9:     (path.arcTo(0, 0, 0, 0, 10, '20', 5): void); // invalid
                                       ^^^^ string. This type is incompatible with
  number. See: [LIB] dom.js:585
  Member 2:
  undefined. See: [LIB] dom.js:584
  Error:
    9:     (path.arcTo(0, 0, 0, 0, 10, '20', 5): void); // invalid
                                       ^^^^ string. This type is incompatible with
  undefined. See: [LIB] dom.js:584


Found 5 errors
